force-app/main/default/objects/Invoice__c/fields/Ack_Date__c.field-meta.xml
<CustomField>
    <fullName>Ack_Date__c</fullName>
    <label>Ack Date</label>
    <type>Date</type>
</CustomField>