force-app/main/default/objects/Invoice__c/fields/Ack_No__c.field-meta.xml
<CustomField>
    <fullName>Ack_No__c</fullName>
    <label>Ack No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>