force-app/main/default/objects/Invoice__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <formula>Retailer_Account__r.Beats_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat</label>
    <type>Text</type>
</CustomField>