force-app/main/default/objects/Invoice__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <description>To store the CGST Value applied while calculating the invoice amount</description>
    <label>CGST %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>