force-app/main/default/objects/Invoice__c/fields/CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount__c</fullName>
    <description>To capture the CGST amount on an Invoice Record</description>
    <label>CGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>