force-app/main/default/objects/Invoice__c/fields/Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collected_Amount__c</fullName>
    <description>This holds the aggregated value of the payments received from Retailer by the distributor</description>
    <inlineHelpText>Aggregated sum of payment collected from retailer by the distributor for all delivered invoices.</inlineHelpText>
    <label>Collected Amount</label>
    <summarizedField>Collection__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Collection__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>