force-app/main/default/objects/Invoice__c/fields/Collection_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Payment_Status__c</fullName>
    <formula>IF(
ISPICKVAL(Status__c, &quot;Cancelled&quot;),
&quot;Cancelled&quot;,
IF(
Total_Payable_Balance__c = 0,
&quot;Paid&quot;,
IF(
AND(Total_Payable_Balance__c &gt; 0, Collected_Amount__c = 0),
&quot;Not Paid&quot;,
IF(
AND(Total_Payable_Balance__c &gt; 0, Collected_Amount__c &gt; 0),
&quot;Partially Paid&quot;,
&quot;Other&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Payment Status</label>
    <type>Text</type>
</CustomField>