force-app/main/default/objects/Invoice__c/fields/Confirmation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_Time__c</fullName>
    <label>Confirmation Date/Time</label>
    <type>DateTime</type>
</CustomField>