force-app/main/default/objects/Invoice__c/fields/Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>Credit_Period__c</fullName>
    <description>To capture the time the Distributor granted to pay the invoice.</description>
    <label>Credit Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>