force-app/main/default/objects/Invoice__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &quot;Secondary_Invoice&quot;,
    Retailer_Account__r.Name,
    IF(
        RecordType.DeveloperName = &quot;Secondary_Invoice_Under_SS&quot;,
        Under_SS__r.Name,
        &quot;&quot;
    )
)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>