force-app/main/default/objects/Invoice__c/fields/Cygnet_Buyer_PIN__c.field-meta.xml
<CustomField>
    <fullName>Cygnet_Buyer_PIN__c</fullName>
    <description>Cygnet buyer pin resolve</description>
    <formula>IF(
  ISBLANK(Under_SS__c),
  &quot;&quot;,
  IF(
    NOT(ISBLANK(Under_SS__r.Primary_PINCode__c)),
    TEXT(Under_SS__r.Primary_PINCode__c),
    Under_SS__r.BillingPostalCode
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cygnet buyer pin resolve</inlineHelpText>
    <label>Cygnet Buyer PIN</label>
    <type>Text</type>
</CustomField>