force-app/main/default/objects/Invoice__c/fields/Cygnet_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Cygnet_Reference_Id__c</fullName>
    <description>Cygnet API referenceId for status polling (cleared when IRN/EWB is received)</description>
    <label>Cygnet Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>