force-app/main/default/objects/Invoice__c/fields/Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the Invoice was created through the bulk upload process.</description>
    <label>Data Upload</label>
    <type>Checkbox</type>
</CustomField>