force-app/main/default/objects/Invoice__c/fields/Discount_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_1__c</fullName>
    <label>TOD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>