force-app/main/default/objects/Invoice__c/fields/Discount_1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_1_Percent__c</fullName>
    <formula>if( Total_Discount1__c &gt; 0,
    (Total_Discount1__c / Invoice_Amount_Before_Tax_del__c),
    0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOD Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>