force-app/main/default/objects/Invoice__c/fields/Discount_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_2__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>