force-app/main/default/objects/Invoice__c/fields/Discount_Mode__c.field-meta.xml
<CustomField>
    <fullName>Discount_Mode__c</fullName>
    <label>Discount Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>SKU_Wise</fullName>
            </value>
            <value>
                <fullName>Overall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>