force-app/main/default/objects/Invoice__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <formula>Distributor_Account__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Code</label>
    <type>Text</type>
</CustomField>