force-app/main/default/objects/Invoice__c/fields/Distributor_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Distributor_GSTIN__c</fullName>
    <formula>Distributor_Account__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor GSTIN</label>
    <type>Text</type>
</CustomField>