force-app/main/default/objects/Invoice__c/fields/Distributor_Hub__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Hub__c</fullName>
    <formula>TEXT(Distributor_Account__r.Hub__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Hub</label>
    <type>Text</type>
</CustomField>