force-app/main/default/objects/Invoice__c/fields/EWB__c.field-meta.xml
<CustomField>
    <fullName>EWB__c</fullName>
    <label>EWB Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>