force-app/main/default/objects/Invoice__c/fields/EWB_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>EWB_Generated_Date__c</fullName>
    <label>EWB Generated Date</label>
    <type>Date</type>
</CustomField>