force-app/main/default/objects/Invoice__c/fields/EWB_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>EWB_Valid_Till__c</fullName>
    <label>EWB Valid Till</label>
    <type>Date</type>
</CustomField>