force-app/main/default/objects/Invoice__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Store the file name from which the records are created using the Bulk Upload</description>
    <inlineHelpText>Store the file name from which the records are created using the Bulk Upload</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>