force-app/main/default/objects/Invoice__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <description>To store the IGST Value applied while calculating the invoice amount</description>
    <label>IGST %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>