force-app/main/default/objects/Invoice__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <description>To capture the IGST amount on an Invoice Record</description>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>