force-app/main/default/objects/Invoice__c/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <description>Last Cygnet integration error message (cleared on success)</description>
    <label>Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>