force-app/main/default/objects/Invoice__c/fields/Invoice_Amount_Before_Tax_del__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Before_Tax_del__c</fullName>
    <label>Invoice Amount Before Discount</label>
    <summarizedField>Invoice_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>