force-app/main/default/objects/Invoice__c/fields/Invoice_Amount_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_In_Words__c</fullName>
    <description>To capture invoice amount in words</description>
    <label>Invoice Amount In Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>