force-app/main/default/objects/Invoice__c/fields/Invoice_Line_Item_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item_Total_Amount__c</fullName>
    <label>Invoice Line Item Total Amount</label>
    <summarizedField>Invoice_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Price__c</field>
        <operation>lessThan</operation>
        <value>20</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>