force-app/main/default/objects/Invoice__c/fields/IRN__c.field-meta.xml
<CustomField>
    <fullName>IRN__c</fullName>
    <label>IRN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>