force-app/main/default/objects/Invoice__c/fields/IRN_Number__c.field-meta.xml
<CustomField>
    <fullName>IRN_Number__c</fullName>
    <description>Text datatype to get the exact IRN Number</description>
    <label>IRN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>