force-app/main/default/objects/Invoice__c/fields/Net_Invoice_Quantity_c__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Quantity_c__c</fullName>
    <label>Net Invoice Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>