force-app/main/default/objects/Invoice__c/fields/Number_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Asset__c</fullName>
    <formula>Retailer_Account__r.Number_of_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Asset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>