force-app/main/default/objects/Invoice__c/fields/Payment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Detail__c</fullName>
    <formula>if( RecordType.Name != &apos;Primary Invoice&apos; ,
    &apos;Total Amount = &apos; +  TEXT(Invoice_Amount__c) + &apos; , Total Payable Balance = &apos; +  TEXT(Total_Payable_Balance__c) + &apos; , Collected Amount = &apos; + TEXT(Collected_Amount__c) ,
    &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Detail</label>
    <type>Text</type>
</CustomField>