force-app/main/default/objects/Invoice__c/fields/Place_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply__c</fullName>
    <description>To store the Distributor Supply State Name</description>
    <label>Place of Supply</label>
    <length>100</length>
    <type>Text</type>
</CustomField>