force-app/main/default/objects/Invoice__c/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <description>Copied from Order__r.Price_Type__c at invoice creation time. NOTE: this is a one-time snapshot and can go stale if the Order is touched afterward — see the new Price_Type_Live__c formula field for a value that always mirrors the Order and can never disagree with it. This field could not be converted to a formula field or deleted (blocked by another reference), so it&apos;s left as-is.</description>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRP</fullName>
                <default>true</default>
                <label>MRP</label>
            </value>
            <value>
                <fullName>Dealer Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>