force-app/main/default/objects/Invoice__c/fields/Price_Type_Live__c.field-meta.xml
<CustomField>
    <fullName>Price_Type_Live__c</fullName>
    <description>Live formula pulling Order__r.Price_Type__c directly — always matches the Order&apos;s current value and can never go stale, unlike the legacy Price_Type__c field on this object (which is a one-time snapshot taken at invoice creation). Prefer this field for any new reports, list views, or code.</description>
    <formula>TEXT(Order__r.Price_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Type</label>
    <type>Text</type>
</CustomField>