force-app/main/default/objects/Invoice__c/fields/QR_Code_Data__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Data__c</fullName>
    <label>QR Code Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>