force-app/main/default/objects/Invoice__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <formula>if(  OR(
        Retailer_Account__r.GSTIN__c != NULL ,
        Under_SS__r.GSTIN__c != NULL 
       ),
     &apos;Register&apos; ,
     &apos;Others&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Type</label>
    <type>Text</type>
</CustomField>