force-app/main/default/objects/Invoice__c/fields/Ref_Invoice_No_Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Ref_Invoice_No_Data_Upload__c</fullName>
    <description>Stores the Ref Invoice No received from the uploaded Excel file for reference and tracking.</description>
    <label>Ref Invoice No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>