force-app/main/default/objects/Invoice__c/fields/Retailer_Account__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link Invoice record with a Retailer Account</description>
    <label>Retailer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Retailer Account)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>