force-app/main/default/objects/Invoice__c/fields/Retailer_FSSAi__c.field-meta.xml
<CustomField>
    <fullName>Retailer_FSSAi__c</fullName>
    <formula>Retailer_Account__r.FSSAI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer FSSAI</label>
    <type>Text</type>
</CustomField>