force-app/main/default/objects/Invoice__c/fields/Retailer_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Retailer_GSTIN__c</fullName>
    <formula>Retailer_Account__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer GSTIN</label>
    <type>Text</type>
</CustomField>