force-app/main/default/objects/Invoice__c/fields/Retailer_Target__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Target__c</fullName>
    <formula>Retailer_Account__r.Monthly_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>