force-app/main/default/objects/Invoice__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <formula>if(  Retailer_Account__c != NULL ,
     Retailer_Account__r.Owner.FirstName + &apos; &apos; +  Retailer_Account__r.Owner.LastName ,
     &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman</label>
    <type>Text</type>
</CustomField>