force-app/main/default/objects/Invoice__c/fields/Salesman_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Name__c</fullName>
    <formula>IF(
  ISBLANK(Order__r.Ordered_By__r.FirstName),
  Order__r.Ordered_By__r.LastName,
  Order__r.Ordered_By__r.FirstName &amp; &quot; &quot; &amp; Order__r.Ordered_By__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman Name</label>
    <type>Text</type>
</CustomField>