force-app/main/default/objects/Invoice__c/fields/Seller_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Seller_GSTIN__c</fullName>
    <label>Seller GSTIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>