force-app/main/default/objects/Invoice__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <description>To store the SGST Value applied while calculating the invoice amount</description>
    <label>SGST %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>