force-app/main/default/objects/Invoice__c/fields/Signed_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Signed_QR_Code__c</fullName>
    <label>Signed QR Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>