force-app/main/default/objects/Invoice__c/fields/Snapshot_Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Collected_Amount__c</fullName>
    <label>Snapshot Collected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>