force-app/main/default/objects/Invoice__c/fields/Snapshot_Discount__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Discount__c</fullName>
    <label>Snapshot Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>