force-app/main/default/objects/Invoice__c/fields/Snapshot_Invoice_Amount_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Invoice_Amount_Before_Tax__c</fullName>
    <label>Snapshot  Invoice Amount Before Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>