force-app/main/default/objects/Invoice__c/fields/Snapshot_Invoice_Line_Item_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Invoice_Line_Item_Total_Amount__c</fullName>
    <label>Snapshot Invoice Line Item Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>