force-app/main/default/objects/Invoice__c/fields/Snapshot_Number_of_Invoice_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Number_of_Invoice_Line_Items__c</fullName>
    <label>Snapshot Number of Invoice Line Items</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>