force-app/main/default/objects/Invoice__c/fields/Snapshot_Total_Discount_1__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Total_Discount_1__c</fullName>
    <label>Snapshot Total Discount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>