force-app/main/default/objects/Invoice__c/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <label>Supplier Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>