force-app/main/default/objects/Invoice__c/fields/Tax_Information__c.field-meta.xml
<CustomField>
    <fullName>Tax_Information__c</fullName>
    <description>To capture the reason for state or central tax applied on an Invoice.</description>
    <label>Tax Information</label>
    <type>TextArea</type>
</CustomField>