force-app/main/default/objects/Invoice__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <description>To capture Invoice Line Item total amount value - before applying tax</description>
    <label>Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>