force-app/main/default/objects/Invoice__c/fields/TCS__c.field-meta.xml
<CustomField>
    <fullName>TCS__c</fullName>
    <description>To capture TCS %</description>
    <label>TCS %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>