force-app/main/default/objects/Invoice__c/fields/TCS_Amount__c.field-meta.xml
<CustomField>
    <fullName>TCS_Amount__c</fullName>
    <description>To capture TCS Amount on Invoice Taxable Amount</description>
    <label>TCS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>