force-app/main/default/objects/Invoice__c/fields/Total_Discount1__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount1__c</fullName>
    <label>Total TOD</label>
    <summarizedField>Invoice_Line_Item__c.Discount_1__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>