force-app/main/default/objects/Invoice__c/fields/Total_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percent__c</fullName>
    <formula>Discount_1_Percent__c +  Discount_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>