force-app/main/default/objects/Invoice__c/fields/Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_GST__c</fullName>
    <description>To capture Total GST Amount on Invoice Taxable amount (SGST+CGST or IGST)</description>
    <label>Total GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>