force-app/main/default/objects/Invoice__c/fields/Total_Payable_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Balance__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Cancelled&quot;), 0, Invoice_Amount__c -  Collected_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>