force-app/main/default/objects/Invoice__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>To capture the Invoice Line Item&apos;s total quantity</description>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>