force-app/main/default/objects/Invoice__c/fields/Total_Reimbursement_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Reimbursement_Applied__c</fullName>
    <description>Sum of all Invoice_Reimbursement_Line__c.Amount_Applied__c rows for this invoice, across every scheme applied. Maintained by MultiSchemeReimbursementService.saveAppliedLines() — not a native Roll-Up Summary since Invoice_Reimbursement_Line__c uses a Lookup, not Master-Detail, to Invoice__c.</description>
    <label>Total Reimbursement Applied</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>